--- a/packages/todo-api/package.json
+++ b/packages/todo-api/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"no tests... yet\""
   },
   "repository": {
