--- a/packages/todo-api/package.json
+++ b/packages/todo-api/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"no tests... yet\""
   },
   "repository": {
@@ -24,9 +25,14 @@
   },
   "homepage": "https://github.com/MykalMachon/AzureTodo#readme",
   "dependencies": {
+    "@azure/cosmos": "^3.17.3",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "pino-http": "^8.3.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.1.4",
+    "nodemon": "^2.0.22"
   }
 }
