--- a/.github/workflows/deploy-todo-api.yml
+++ b/.github/workflows/deploy-todo-api.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - "packages/todo-api/**"
       - ".github/workflows/deploy-todo-api.yml"
+  workflow_dispatch:
 
 jobs:
   # build-and-deploy:
