--- a/.github/workflows/deploy-todo-api.yml
+++ b/.github/workflows/deploy-todo-api.yml
@@ -63,4 +63,4 @@ jobs:
           context: .
           file: ./packages/todo-api/dockerfile
           push: true
-          tags: ghcr.io/${{ env.REPO_LOWERCASE }}-api:${{ github.sha }}
+          tags: ghcr.io/${{ env.REPO_LOWERCASE }}-api:${{ github.sha }}, ghcr.io/${{ env.REPO_LOWERCASE }}-api:latest
