--- a/.github/workflows/deploy-todo-api.yml
+++ b/.github/workflows/deploy-todo-api.yml
@@ -1,66 +1,42 @@
-name: 'Build & Push API Docker Image'
+name: Azure Container Apps CI/CD
 
+# When this action will be executed
 on:
+  # Automatically trigger it when detected changes in repo
   push:
-    branches: [main]
+    branches: 
+      [ main ]
     paths:
-      - "packages/todo-api/**"
-      - ".github/workflows/deploy-todo-api.yml"
+    - 'packages/todo-api/dockerfile/**'
+    - '.github/workflows/deploy-todo-api.yml'
+
+  # Allow mannually trigger 
   workflow_dispatch:
-
+      
 jobs:
-  # build-and-deploy:
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: Checkout to the branch
-  #       uses: actions/checkout@v2
-
-  #     - name: Azure Login
-  #       uses: azure/login@v1
-  #       with:
-  #         creds: ${{ secrets.AZURETODODEV_AZURE_CREDENTIALS }}
-
-  #     - name: Build and push container image to registry
-  #       uses: azure/container-apps-deploy-action@v1
-  #       with:
-  #         appSourcePath: ${{ github.workspace }}
-  #         registryUrl: azuretododev.azurecr.io
-  #         registryUsername: ${{ secrets.AZURETODODEV_REGISTRY_USERNAME }}
-  #         registryPassword: ${{ secrets.AZURETODODEV_REGISTRY_PASSWORD }}
-  #         containerAppName: azuretodo-dev
-  #         resourceGroup: azure-todo_dev
-  #         imageToBuild: azuretododev.azurecr.io/todo-api:${{ github.sha }}
-  #         dockerfilePath: packages/todo-api/dockerfile
-
-  build_and_push:
-    name: Build & Push API Docker Image
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout to the branch
         uses: actions/checkout@v2
 
-      - name: Set up QEMU for multi-platform support
-        uses: docker/setup-qemu-action@v1
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+      - name: Azure Login
+        uses: azure/login@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          creds: ${{ secrets.AZURETODODEV_AZURE_CREDENTIALS }}
 
-      - name: Downcase repo name
-        run: |
-          echo "REPO_LOWERCASE=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-
-      - name: Build and push
-        uses: docker/build-push-action@v3
+      - name: Build and push container image to registry
+        uses: azure/container-apps-deploy-action@v1
         with:
-          context: .
-          file: ./packages/todo-api/dockerfile
-          push: true
-          tags: ghcr.io/${{ env.REPO_LOWERCASE }}-api:${{ github.sha }}, ghcr.io/${{ env.REPO_LOWERCASE }}-api:latest
+          appSourcePath: ${{ github.workspace }}
+          registryUrl: ghcr.io
+          registryUsername: ${{ secrets.AZURETODODEV_REGISTRY_USERNAME }}
+          registryPassword: ${{ secrets.AZURETODODEV_REGISTRY_PASSWORD }}
+          containerAppName: azuretodo-dev
+          resourceGroup: azure-todo_dev
+          imageToBuild: ghcr.io/mykalmachon/azuretodo-api:${{ github.sha }}
+          dockerfilePath: packages/todo-api/dockerfile
+
+     
+
