--- a/.github/workflows/deploy-todo-api.yml
+++ b/.github/workflows/deploy-todo-api.yml
@@ -7,14 +7,46 @@ on:
     branches: 
       [ main ]
     paths:
-    - 'packages/todo-api/dockerfile/**'
+    - 'packages/todo-api/**'
     - '.github/workflows/deploy-todo-api.yml'
 
   # Allow mannually trigger 
   workflow_dispatch:
       
 jobs:
-  build-and-deploy:
+  build-and-publish:
+    name: Build and publish API image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up QEMU for multi-platform support
+        uses: docker/setup-qemu-action@v1
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Downcase repo name
+        run: |
+          echo "REPO_LOWERCASE=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./packages/todo-api/dockerfile
+          push: true
+          tags: ghcr.io/${{ env.REPO_LOWERCASE }}-api:${{ github.sha }}, ghcr.io/${{ env.REPO_LOWERCASE }}-api:latest
+
+  deploy-to-azure:
+    name: Deploy new Image to Azure
     runs-on: ubuntu-latest
 
     steps:
@@ -29,14 +61,12 @@ jobs:
       - name: Build and push container image to registry
         uses: azure/container-apps-deploy-action@v1
         with:
-          appSourcePath: ${{ github.workspace }}
           registryUrl: ghcr.io
           registryUsername: ${{ secrets.AZURETODODEV_REGISTRY_USERNAME }}
           registryPassword: ${{ secrets.AZURETODODEV_REGISTRY_PASSWORD }}
           containerAppName: azuretodo-dev
           resourceGroup: azure-todo_dev
-          imageToBuild: ghcr.io/mykalmachon/azuretodo-api:${{ github.sha }}
-          dockerfilePath: packages/todo-api/dockerfile
+          imageToBuild: ghcr.io/${{ env.REPO_LOWERCASE }}-api:${{ github.sha }}
 
      
 
