--- a/.github/workflows/deploy-todo-api.yml
+++ b/.github/workflows/deploy-todo-api.yml
@@ -48,6 +48,7 @@ jobs:
   deploy-to-azure:
     name: Deploy new Image to Azure
     runs-on: ubuntu-latest
+    needs: build-and-publish
 
     steps:
       - name: Checkout to the branch
