--- a/.github/workflows/deploy-todo-api.yml
+++ b/.github/workflows/deploy-todo-api.yml
@@ -57,8 +57,12 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURETODODEV_AZURE_CREDENTIALS }}
+      
+      - name: Downcase repo name
+        run: |
+          echo "REPO_LOWERCASE=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
-      - name: Build and push container image to registry
+      - name: Pointing Container App to the new image
         uses: azure/container-apps-deploy-action@v1
         with:
           registryUrl: ghcr.io
